--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.8.2",
     "https": "^1.0.0",
     "imagesloaded": "^5.0.0",
-    "next": "^15.2",
+    "next": "15.2.3",
+    "pnpm": "^10.6.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-timer-hook": "^3.0.8"
@@ -23,9 +24,8 @@
     "@types/node": "20",
     "@types/react": "18",
     "@types/react-dom": "^18",
-    "eslint": "8.57.1",
+    "eslint": "^9.23.0",
     "eslint-config-next": "15.0.2",
-    "postcss": "8",
     "react-emoji-render": "^2.0.1",
     "tailwindcss": "3.4.14",
     "typescript": "5"
